--- a/requirements/measurements/backscatter-orb.yaml
+++ b/requirements/measurements/backscatter-orb.yaml
@@ -17,7 +17,7 @@ threshold:
     - Bits per Sample
     - Byte Order
   notes:
-    - Transformation to the logarithm decibel scale is not required or desired as this step can be completed by the user if necessary.
+    - Transformation to the logarithm decibel scale is not required or desired as this step can be easily completed by the user if necessary.
 goal:
   description: |-
     Radiometrically Terrain-corrected Sigma-Nought backscatter coefficient ($\sigma^0_T$) is provided for each polarization.
