--- a/sections/annexes/st-metadata-examples.yaml
+++ b/sections/annexes/st-metadata-examples.yaml
@@ -1,4 +1,4 @@
-title: CEOS-ARD ST Requirement Examples
+title: CEOS-ARD Requirement Examples (Surface Temperature)
 description: include:st-metadata-examples
 glossary:
 references:
