--- a/requirements/corrections/geometric-sr.yaml
+++ b/requirements/corrections/geometric-sr.yaml
@@ -1,31 +1,32 @@
 title: Geometric Correction
 description: 
 threshold:
+  # The only difference to ST is the third paragraph below.
   description: |-
     Sub-pixel accuracy is achieved in **relative** geolocation, that is, the pixels from the same instrument and platform are consistently located, and in thus comparable, through time.
 
     Sub-pixel accuracy is taken to be less than or equal to 0.5 pixel radial root mean square error (rRMSE) or equivalent in Circular Error Probability (CEP) relative to a defined reference image.
 
-    A consistent gridding/sampling frame is necessary to meet this requirement.
+    A consistent gridding/sampling frame is used, including common cell size, origin, and nominal sample point location within the cell (centre, ll, ur).
 
-    Relevant metadata must be provided under [@metadata/geometric-accuracy] and [@metadata/instrument-st].
+    Relevant metadata must be provided under [@metadata/geometric-accuracy] and [@metadata/instrument-optical].
   notes:
     - |-
-      The threshold level will not necessarily enable interoperability between data from different sources as the geometric corrections for each of the sources may differ. 
+      The threshold level will not necessarily enable interoperability between data from **different** sources as the geometric corrections for each of the sources may differ. 
 goal:
-  # todo: The last two paragraphs already a threshold req. -> remove below?
+  # todo: The last two paragraphs are already a threshold req. -> remove below?
   description: |-
     Sub-pixel accuracy is achieved relative to an identified absolute independent terrestrial referencing system (such as a national map grid).
 
     A consistent gridding/sampling frame is necessary to meet this requirement.
 
-    Relevant metadata must be provided under [@metadata/geometric-accuracy] and [@metadata/instrument-st].
+    Relevant metadata must be provided under [@metadata/geometric-accuracy] and [@metadata/instrument-optical].
   notes:
     - |-
       This requirement is intended to enable interoperability between imagery from different platforms that meet this level of correction, and with non-image spatial data such as GIS layers and terrain models.
 dependencies:
   - metadata/geometric-accuracy
-  - metadata/instrument-st
+  - metadata/instrument-optical
 glossary:
   - cep
   - gis
