--- a/requirements/per-pixel/incomplete-testing.yaml
+++ b/requirements/per-pixel/incomplete-testing.yaml
@@ -4,7 +4,7 @@ threshold:
   description: |-
     The metadata identifies pixels for which the per-pixel tests (below) have not all been successfully completed.
   notes:
-    - e.g., due to missing ancillary data for some pixels.
+    - This may be the result of missing ancillary data for a subset of the pixels.
 goal:
   description: |-
     The metadata identifies which tests have, and have not, been successfully completed for each pixel.
