--- a/requirements/metadata/machine-readability-optical.yaml
+++ b/requirements/metadata/machine-readability-optical.yaml
@@ -2,7 +2,7 @@ title: Metadata Machine Readability
 description:
 threshold:
   description: |-
-    Metadata is provided in a structure that enables a computer algorithm to be used to consistently and automatically identify and extract each component/variable/layer for further use.
+    Metadata is provided in a structure that enables a computer algorithm to be used to consistently and automatically identify and extract each component part for further use.
   notes:
 goal:
   description: |-
