--- a/pfs/SAR-GSLC/requirements.yaml
+++ b/pfs/SAR-GSLC/requirements.yaml
@@ -37,7 +37,7 @@
     - metadata/orbit-reference-gslc
 - category: per-pixel-metadata
   requirements:
-    # - cloud-optimized-formats
+    - cloud-optimized-formats
     - metadata/machine-readability-sar
     - per-pixel/data-mask
     - per-pixel/scattering-area
@@ -54,7 +54,7 @@
     - per-pixel/ionospheric-phase-correction
 - category: radiometrically-corrected-measurements
   requirements:
-    # - cloud-optimized-formats
+    - cloud-optimized-formats
     - measurements/backscatter-gslc
     - metadata/scaling-conversion
     - metadata/noise-removal
