--- a/pfs/SAR-ORB/requirements.yaml
+++ b/pfs/SAR-ORB/requirements.yaml
@@ -37,7 +37,7 @@
     - metadata/look-direction-polynomials
 - category: per-pixel-metadata
   requirements:
-    # - cloud-optimized-formats
+    - cloud-optimized-formats
     - metadata/machine-readability-sar
     - per-pixel/data-mask
     - per-pixel/scattering-area
@@ -49,7 +49,7 @@
     - per-pixel/look-direction
 - category: radiometrically-corrected-measurements
   requirements:
-    # - cloud-optimized-formats
+    - cloud-optimized-formats
     - measurements/backscatter-orb
     - metadata/scaling-conversion
     - metadata/noise-removal
