--- a/requirements/corrections/geometric-sr.yaml
+++ b/requirements/corrections/geometric-sr.yaml
@@ -3,7 +3,7 @@ description:
 threshold:
   # The only difference to ST is the third paragraph below.
   description: |-
-    Sub-pixel accuracy is achieved in **relative** geolocation, that is, the pixels from the same instrument and platform are consistently located, and in thus comparable, through time.
+    Sub-pixel accuracy is achieved in **relative** geolocation, that is, the pixels from the same instrument and platform are consistently located, and are thus comparable, through time.
 
     Sub-pixel accuracy is taken to be less than or equal to 0.5 pixel radial root mean square error (rRMSE) or equivalent in Circular Error Probability (CEP) relative to a defined reference image.
 
