--- a/requirements/measurements/normalisation-nlsr.yaml
+++ b/requirements/measurements/normalisation-nlsr.yaml
@@ -3,15 +3,15 @@ description:
 threshold: null
 goal:
   description: |-
-    Measurements are normalised for solar and viewing conditions (i.e., nadir view angle and average solar angles). This may include terrain illumination and/or Bi-Directional Reflectance Function (BRDF) correction.
+    Measurements are normalised for viewing conditions (i.e., nadir view angle).
+    This may include radiative transfer modelling.
   notes:
     - Information on measurement normalisation should be available in the metadata as a single DOI landing page.
 dependencies:
 glossary:
-  - brdf
   - doi
 references:
 metadata:
 legacy:
   sar:
-  optical: SR 3.3
+  optical: NLSR 3.3
