--- a/requirements/per-pixel/snow-ice.yaml
+++ b/requirements/per-pixel/snow-ice.yaml
@@ -1,4 +1,4 @@
-title: Snow/Ice mask
+title: Snow/Ice Mask
 description: 
 threshold: null
 goal:
@@ -12,4 +12,4 @@ references:
 metadata:
 legacy:
   sar:
-  optical: ST 2.7 / SR 2.8
+  optical: ST 2.7 / SR 2.8 / NLSR 2.8
