--- a/pfs/ST/requirements.yaml
+++ b/pfs/ST/requirements.yaml
@@ -25,7 +25,7 @@
     - per-pixel/saturation
     - per-pixel/cloud
     - per-pixel/cloud-shadow
-    - per-pixel/snow-ice
+    - per-pixel/snow-ice-sr
     - per-pixel/view-angles-solar
 - category: radiometric-atmospheric-corrections
   requirements:
