Add Surface Reflectance and Nighttime Light Surface Radiance (#91)
* Add Surface Reflectance, minor changes to ST

* Adding code owners

* Fix inconsistencies after migration

* Add NLSR

* Fixed issues reported by @barnes-usgs

--- a/pfs/SAR-ORB/requirements.yaml
+++ b/pfs/SAR-ORB/requirements.yaml
@@ -2,21 +2,21 @@
   requirements:
     # todo: most of the general metadata is product metadata - this should potentially be merged.
     - metadata/traceability-sar
-    - metadata/machine-readability
+    - metadata/machine-readability-sar
     - metadata/product-type-sar
     - metadata/pfs-url
-    - metadata/time
+    - metadata/time-sar
 - category: source-metadata
   requirements:
     - metadata/acquisition-id # todo: this is new from the category description
     - metadata/data-access-source
-    - metadata/instrument
+    - metadata/instrument-sar
     - metadata/time-source
     - metadata/acquisition-parameters-sar
     - metadata/orbit
     - metadata/processing-parameters
     - metadata/image-attributes-sar
-    - metadata/sensor-calibration
+    - metadata/sensor-calibration-sar
     - metadata/performance-indicators
     - metadata/polarimetric-calibration-matrices
     - metadata/mean-faraday-rotation-angle
@@ -37,8 +37,8 @@
     - metadata/look-direction-polynomials
 - category: per-pixel-metadata
   requirements:
-    # - cloud-optimized-formats
-    - metadata/machine-readability
+    - cloud-optimized-formats
+    - metadata/machine-readability-sar
     - per-pixel/data-mask
     - per-pixel/scattering-area
     - per-pixel/local-incident-angle
@@ -49,11 +49,11 @@
     - per-pixel/look-direction
 - category: radiometrically-corrected-measurements
   requirements:
-    # - cloud-optimized-formats
+    - cloud-optimized-formats
     - measurements/backscatter-orb
     - metadata/scaling-conversion
     - metadata/noise-removal
-    - metadata/radiometric-accuracy
+    - metadata/radiometric-accuracy-sar
     - measurements/mean-wind-normalised-backscatter
 - category: geometric-corrections
   requirements:
