--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ node_modules/
 .DS_Store
 Thumbs.db
 
+/GSLC.*
 /NLSR.*
-/SAR-GSLC.*
-/SAR-NRB.*
-/SAR-ORB.*
-/SAR-POL.*
+/NRB.*
+/ORB.*
+/POL.*
 /SR.*
 /ST.*
 /build*
